# Hello-World

./: .gitmodules  CMakeLists.txt  Hello-World.sln
Hello-World/: Core.h  DateTime.h  FlagHelper.h  Games.h  Hello-World.vcxproj  Hello-World.vcxproj.filters  Hobby.h  Person.cpp  Person.h  School.cpp  School.h  University.cpp  University.h  main.cpp
Hello-World/x64/Debug/: Hello-World.exe.recipe  Hello-World.ilk  vc143.idb
Hello-World/x64/Debug/Hello-World.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hello-World.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
data/: mainCharacter.json
src/: Core.h  DateTime.h  Games.cpp  Games.h  Hobby.cpp  Hobby.h  Movies.cpp  Movies.h  Person.cpp  Person.h  School.cpp  School.h  University.cpp  University.h  main.cpp
